--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>San Valentín</title>
+    <title>14 de febrero</title>
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
@@ -11,13 +11,13 @@
     <div id="background"></div>
 
     <div class="content">
-        <h1>¿Quieres ser mi San Valentín?</h1>
+        <h1>¿quieres ser mi 14 de febrero, dia de la amistad :) ?</h1>
         <div class="buttons">
             <button id="siButton">Sí</button>
             <button id="noButton">No</button>
         </div>
         <p id="frase" style="display:none;"></p>
-        <p id="respuesta" style="display:none;">¡Sabía que dirías que sí, preciosa!</p>
+        <p id="respuesta" style="display:none;">¡Sabía que dirías que sí, precioso!</p>
         <div id="emojis" style="display:none;"></div>
     </div>
 
